[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debug_print = "1.0.0"
defaultmap = "0.5.0"
derive_more = "0.99.17"
hashbrown = "0.13.1"
itertools = "0.10.5"
num = "0.4.0"
pathfinding = "4.0.0"
rayon = "1.6.1"
regex = "1.7.0"
