[package]
name = "aoc"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debug_print = "1.0.0"
defaultmap = "0.6.0"
derive_more = "1.0.0"
hashbrown = "0.14.5"
itertools = "0.13.0"
num = "0.4.3"
pathfinding = "4.11.0"
rayon = "1.10.0"
regex = "1.10.6"
